Fixed alignment issue

--- a/style.css
+++ b/style.css
@@ -174,14 +174,17 @@ body {
     background-position: center bottom;
     background-repeat: no-repeat;
     padding: 4em;
-    padding-top: 25%;
-    align-items: baseline;
-    /* align-items: center; */
+    /* justify-content: center; */
+    /* padding-top: 25%;
+    align-items: baseline; */
+    align-items: center;
   }
 
   .icon-container {
     margin-right: 2em;
     width: 50%;
+    /* Add new */
+    margin-bottom: 5em;
   }
 
   .absolute-positioned {
